<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/middle"
        android:layout_width="@dimen/newChordWidth"
        android:layout_height="50dp"
        android:text="@string/button_chord1"
        tools:layout_editor_absoluteY="6dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/bottom"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/button_chord2"
        tools:layout_editor_absoluteX="89dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/middle" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/newChordWidth"
        android:layout_height="wrap_content"
        android:text="@string/button_chord3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bottom"
        tools:layout_editor_absoluteX="34dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/newChordWidth"
        android:layout_height="wrap_content"
        android:text="@string/button_chord4"
        tools:layout_editor_absoluteX="61dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</android.support.constraint.ConstraintLayout>
